--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,45 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>마이다스의 손</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </head>
-<body>
-    
+
+<body style="background-color: floralwhite">
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">마이다스의 손</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Something</a>
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
-            <a class="nav-item nav-link" href="#" >Disabled</a>
-          </div>
-        </div>
-      </nav>
-
-      <header style="background-image: linear-gradient(rgba(255,255,255,0.7),rgba(255,255,255,0.7)); ">
-        <div class="card bg-dark text-white">
-            <img src="https://modo-phinf.pstatic.net/20151109_226/1447009266286E95x4_JPEG/mosaCTt1ZS.jpeg?type=w1100" class="card-img" alt="..." width="100%" style="filter: brightness(70%);">
-            <div class="card-img-overlay" style="text-align: center;">
-              <h1 class="card-title" style="color: rgb(255, 217, 0); font-size: 140px;">마이다스의 손</h1>
-              <br>
-              <p class="card-text" style="color: white; font-size: 40px;">근본적인 문제를 해결하는 수기건강 테라피</p>
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="#">도수치료</a>
+                <a class="nav-item nav-link" href="#">자세교정 영상</a>
+                <a class="nav-item nav-link" href="#">가게 소개</a>
+                <a class="nav-item nav-link" href="#">위치</a>
             </div>
-          </div>
-      </header>
-      <div class="container">
-        <!-- Content here -->
-        <h1>도수 치료란?</h1>
-      </div>
+        </div>
+    </nav>
+
+    <header  >
+        <div class="card bg-dark text-white">
+            <img src="https://modo-phinf.pstatic.net/20151109_226/1447009266286E95x4_JPEG/mosaCTt1ZS.jpeg?type=w1100"
+                class="card-img" alt="..." width="100%" style="filter: brightness(60%);" height="800px">
+            <div class="card-img-overlay" style="text-align: center;">
+                <h1 class="card-title" style="color: rgb(255, 217, 0); font-size: 140px;">마이다스의 손</h1>
+                <br>
+                <p class="card-text" style="color: white; font-size: 40px;">근본적인 문제를 해결하는 수기건강 테라피</p>
+            </div>
+        </div>
+    </header>
+    <br>
+    <br>
+    <section id="explanin">
+        <div class="container">
+            <!-- Content here -->
+            <div class="row">
+                <h1>도수 치료란?</h1>
+            </div>
+            <hr>
+            <div class="row">
+                <img style="filter: brightness(70%);" width="100%" height="500px" src="https://post-phinf.pstatic.net/MjAxOTA2MjdfMjIx/MDAxNTYxNjAzNDE5NzUx.zj_b_t2et45DJDdrcLPbRc3w4hzUy9RGJLMA74WNbCAg.5sU19zsKczQfPNL5MuV2EuX35kBbKVut0zY3FRy90ycg.JPEG/IMba1A9a1xN5iwL4xvvrtMuxqBf8.jpg?type=m4500_4500_fst">
+            </div>
+            <div class="row">
+                <p style="font-size: 20px;">
+                   약물이나 수술, 기계를 사용하지 않고 전문 도수치료사의 수기로 근 골격계에 발생할 수 있는 통증, 질환, 외상 등 관전의 문제를
+                   개선하는 치료를 말합니다.<br>
+                   마이다스의 손은 전문 도수치료사가 1대1 정확한 맞춤 치료로 환자가 불편하다고 느끼는
+                   틀어진 뼈와,근육,신경을 바로 잡아주는 치료를 진행하고 있습니다.
+                </p>
+            </div>
+        </div>
+    </section>
+    <br>
+    <br>
+
+    <section id="video_ads" >
+        <div class="container">
+         
+            <div class="row">
+                <h1>
+                    영상을 통해 스스로 하는 자세교정
+                 </h1>
+                 <hr>
+            </div>
+            <div class="row">
+                <p>
+                    보고 따라 하면 좋은 유용한 자세교정 영상.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qMtyhDDmJ-U?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-6">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/jD5EwJncYLw?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+              
+            </div>
+
+        </div> 
+            
+        
+
+    </section>
+
+    <section style="margin-bottom: 70px;"> 
+
+    </section> 
+
+    <footer>
+        <div style="background-color:rgb(54, 54, 54); margin-bottom: 0px; " class="fixed-bottom" >
+            <p style="text-align: center; color: rgb(117, 117, 117); margin-bottom: 0px;">마이다스의 손
+                <br>@Copyright 조민수</p>
+        </div>
+    </footer>
+
 </body>
+
 </html>
