--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 
 <head>
     <meta charset="UTF-8">
@@ -21,99 +21,210 @@
 
 <body style="background-color: floralwhite">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">마이다스의 손</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">도수치료</a>
-                <a class="nav-item nav-link" href="#">자세교정 영상</a>
-                <a class="nav-item nav-link" href="#">가게 소개</a>
-                <a class="nav-item nav-link" href="#">위치</a>
-            </div>
+    <div class="sticky-top">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">마이다스의 손</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="#explain">도수치료</a>
+                        <a class="nav-item nav-link" href="#video_ads">자세교정 영상</a>
+                        <a class="nav-item nav-link" href="#price">가격 안내</a>
+                        <a class="nav-item nav-link" href="#location">위치</a>
+                    </div>
+                </div>
+            </nav>
         </div>
-    </nav>
-
-    <header  >
-        <div class="card bg-dark text-white">
-            <img src="https://modo-phinf.pstatic.net/20151109_226/1447009266286E95x4_JPEG/mosaCTt1ZS.jpeg?type=w1100"
-                class="card-img" alt="..." width="100%" style="filter: brightness(60%);" height="800px">
-            <div class="card-img-overlay" style="text-align: center;">
-                <h1 class="card-title" style="color: rgb(255, 217, 0); font-size: 140px;">마이다스의 손</h1>
-                <br>
-                <p class="card-text" style="color: white; font-size: 40px;">근본적인 문제를 해결하는 수기건강 테라피</p>
+    </div>
+    <div class="container-fluid">
+        <header style="margin-bottom: 40px;">
+            <div class="card bg-dark text-white">
+                <img src="https://modo-phinf.pstatic.net/20151109_226/1447009266286E95x4_JPEG/mosaCTt1ZS.jpeg?type=w1100"
+                    class="card-img" alt="..." width="400px" style="filter: brightness(60%);" height="800px">
+                <div class="card-img-overlay" style="text-align: center;">
+                    <h1 class="card-title" style="color: rgb(255, 217, 0); font-size: 140px;">마이다스의 손</h1>
+                    <br>
+                    <p class="card-text" style="color: white; font-size: 40px;">근본적인 문제를 해결하는 수기건강 테라피</p>
+                </div>
             </div>
-        </div>
-    </header>
+        </header>
+    </div>
     <br>
-    <br>
-    <section id="explanin">
-        <div class="container">
+    <section id="explain">
+        <div class="container" style="margin-top:30px;" id="explain">
             <!-- Content here -->
             <div class="row">
                 <h1>도수 치료란?</h1>
             </div>
             <hr>
             <div class="row">
-                <img style="filter: brightness(70%);" width="100%" height="500px" src="https://post-phinf.pstatic.net/MjAxOTA2MjdfMjIx/MDAxNTYxNjAzNDE5NzUx.zj_b_t2et45DJDdrcLPbRc3w4hzUy9RGJLMA74WNbCAg.5sU19zsKczQfPNL5MuV2EuX35kBbKVut0zY3FRy90ycg.JPEG/IMba1A9a1xN5iwL4xvvrtMuxqBf8.jpg?type=m4500_4500_fst">
+                <img style="filter: brightness(70%);" width="100%" height="500px"
+                    src="https://post-phinf.pstatic.net/MjAxOTA2MjdfMjIx/MDAxNTYxNjAzNDE5NzUx.zj_b_t2et45DJDdrcLPbRc3w4hzUy9RGJLMA74WNbCAg.5sU19zsKczQfPNL5MuV2EuX35kBbKVut0zY3FRy90ycg.JPEG/IMba1A9a1xN5iwL4xvvrtMuxqBf8.jpg?type=m4500_4500_fst">
             </div>
             <div class="row">
                 <p style="font-size: 20px;">
-                   약물이나 수술, 기계를 사용하지 않고 전문 도수치료사의 수기로 근 골격계에 발생할 수 있는 통증, 질환, 외상 등 관전의 문제를
-                   개선하는 치료를 말합니다.<br>
-                   마이다스의 손은 전문 도수치료사가 1대1 정확한 맞춤 치료로 환자가 불편하다고 느끼는
-                   틀어진 뼈와,근육,신경을 바로 잡아주는 치료를 진행하고 있습니다.
+                    약물이나 수술, 기계를 사용하지 않고 전문 도수치료사의 수기로 근 골격계에 발생할 수 있는 통증, 질환, 외상 등 관전의 문제를
+                    개선하는 치료를 말합니다.<br>
+                    마이다스의 손은 전문 도수치료사가 1대1 정확한 맞춤 치료로 환자가 불편하다고 느끼는
+                    틀어진 뼈와,근육,신경을 바로 잡아주는 치료를 진행하고 있습니다.
                 </p>
             </div>
         </div>
     </section>
-    <br>
-    <br>
 
-    <section id="video_ads" >
+
+    <section id="video_ads">
         <div class="container">
-         
+
             <div class="row">
                 <h1>
                     영상을 통해 스스로 하는 자세교정
-                 </h1>
-                 <hr>
+                </h1>
+
             </div>
             <div class="row">
                 <p>
                     보고 따라 하면 좋은 유용한 자세교정 영상.
                 </p>
             </div>
+            <hr>
             <div class="row">
                 <div class="col-6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qMtyhDDmJ-U?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qMtyhDDmJ-U?start=5"
+                        frameborder="2" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
                 <div class="col-6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/jD5EwJncYLw?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/jD5EwJncYLw?start=5"
+                        frameborder="2" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
-              
+            </div>
+            <br>
+            <div class="row">
+                <h1>
+                    도수치료 영상
+                </h1>
+            </div>
+            <div class="row">
+                <p>
+                    재미로 보는 도수치료 영상
+                </p>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-6">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/CDH6fmI4-iw" frameborder="2"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col-6">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/lE_D667wKX0" frameborder="2"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
 
-        </div> 
-            
-        
+        </div>
+    </section>
+    <br>
+    <section id="price">
 
+        <div class="container">
+            <h1>
+                가격안내
+            </h1>
+            <hr>
+            <div class="card-group">
+                <div class="card" style="margin-right: 10px;">
+                    <div class="card-body">
+                        <h5 class="card-title">반신</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+                <div class="card" style="margin-right: 10px;">
+                    <div class="card-body">
+                        <h5 class="card-title">전신</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+                <div class="card" style="margin-right: 10px;">
+                    <div class="card-body">
+                        <h5 class="card-title">전신x10</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This card has even longer content than the first to show that equal
+                            height action.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <br>
+    <section id="location" style="margin-bottom: 70px;">
+        <div class="container">
+            <h1>위치</h1>
+            <hr>
+            <div id="map" style="width:1200px;height:700px;">
+            </div>
+        </div>
     </section>
 
-    <section style="margin-bottom: 70px;"> 
-
-    </section> 
-
     <footer>
-        <div style="background-color:rgb(54, 54, 54); margin-bottom: 0px; " class="fixed-bottom" >
+        <div style="background-color:rgb(54, 54, 54); margin-bottom: 0px; " class="fixed-bottom">
             <p style="text-align: center; color: rgb(117, 117, 117); margin-bottom: 0px;">마이다스의 손
                 <br>@Copyright 조민수</p>
         </div>
     </footer>
 
 </body>
+
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5bb83ac1b6ee699b4a05b3ea4ad9d386">
+
+
+</script>
+
+<script>
+    var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+        mapOption = {
+            center: new kakao.maps.LatLng(37.7542485, 126.7782498), // 지도의 중심좌표
+            level: 3 // 지도의 확대 레벨
+        };
+
+    var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+    // 마커가 표시될 위치입니다 
+    var markerPosition = new kakao.maps.LatLng(37.7542485, 126.7782498);
+
+    // 마커를 생성합니다
+    var marker = new kakao.maps.Marker({
+        position: markerPosition
+    });
+
+    // 마커가 지도 위에 표시되도록 설정합니다
+    marker.setMap(map);
+    var iwContent = '<div style="padding:30px;">마이다스의손 (경기도 파주시 금촌동 가나무로 115) <br><a href="https://map.kakao.com/link/map/마이다스의손,37.7542485,126.7782498" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/마이다스의손,37.7542485,126.7782498" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+    iwPosition = new kakao.maps.LatLng(37.7542485, 126.7782498); //인포윈도우 표시 위치입니다
+
+// 인포윈도우를 생성합니다
+var infowindow = new kakao.maps.InfoWindow({
+    position : iwPosition, 
+    content : iwContent 
+});
+  
+// 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+infowindow.open(map, marker); 
+
+
+</script>
 
 </html>
