--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -17,82 +17,99 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans&display=swap" rel="stylesheet">
 </head>
 
-<body style="background-color: floralwhite">
+<body style="background-color: rgb(236, 242, 245)">
 
     <div class="sticky-top">
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">마이다스의 손</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#explain">도수치료</a>
-                        <a class="nav-item nav-link" href="#video_ads">자세교정 영상</a>
-                        <a class="nav-item nav-link" href="#price">가격 안내</a>
-                        <a class="nav-item nav-link" href="#location">위치</a>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <header style="margin-bottom: 40px;">
-            <div class="card bg-dark text-white">
-                <img src="https://modo-phinf.pstatic.net/20151109_226/1447009266286E95x4_JPEG/mosaCTt1ZS.jpeg?type=w1100"
-                    class="card-img" alt="..." width="400px" style="filter: brightness(60%);" height="800px">
-                <div class="card-img-overlay" style="text-align: center;">
-                    <h1 class="card-title" style="color: rgb(255, 217, 0); font-size: 140px;">마이다스의 손</h1>
-                    <br>
-                    <p class="card-text" style="color: white; font-size: 40px;">근본적인 문제를 해결하는 수기건강 테라피</p>
+
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">마이다스의 손</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="#explain">도수치료</a>
+                    <a class="nav-item nav-link" href="#video_ads">자세교정 영상</a>
+                    <a class="nav-item nav-link" href="#price">가격 안내</a>
+                    <a class="nav-item nav-link" href="#location">위치</a>
                 </div>
             </div>
-        </header>
+        </nav>
+
     </div>
+
+    <header style="margin-bottom: 40px;">
+        <div class="card bg-dark text-white">
+            <img src="https://modo-phinf.pstatic.net/20151109_226/1447009266286E95x4_JPEG/mosaCTt1ZS.jpeg?type=w1100"
+                class="card-img" alt="..." width="400px" style="filter: brightness(60%);" height="900px">
+            <div class="card-img-overlay" style="text-align: center; font-family: 'Black Han Sans', sans-serif;">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <h1 class="card-title" style="color: gold; font-size: 140px;">마이다스의 손</h1>
+                <br>
+                <p class="card-text" style="color: white; font-size: 40px;">근본적인 문제를 해결하는 수기건강 테라피</p>
+            </div>
+        </div>
+    </header>
+
     <br>
     <section id="explain">
         <div class="container" style="margin-top:30px;" id="explain">
             <!-- Content here -->
-            <div class="row">
-                <h1>도수 치료란?</h1>
+            <div class="row" style="border-bottom: rgb(105, 105, 105) solid 1px;">
+                <h1 style="font-family: 'Yeon Sung', cursive;">도수 치료란?</h1>
             </div>
-            <hr>
             <div class="row">
-                <img style="filter: brightness(70%);" width="100%" height="500px"
+                <br>
+            </div>
+            <div class="row">
+                <img style="filter: brightness(90%);" width="100%" height="500px"
                     src="https://post-phinf.pstatic.net/MjAxOTA2MjdfMjIx/MDAxNTYxNjAzNDE5NzUx.zj_b_t2et45DJDdrcLPbRc3w4hzUy9RGJLMA74WNbCAg.5sU19zsKczQfPNL5MuV2EuX35kBbKVut0zY3FRy90ycg.JPEG/IMba1A9a1xN5iwL4xvvrtMuxqBf8.jpg?type=m4500_4500_fst">
             </div>
+            <br>
             <div class="row">
-                <p style="font-size: 20px;">
-                    약물이나 수술, 기계를 사용하지 않고 전문 도수치료사의 수기로 근 골격계에 발생할 수 있는 통증, 질환, 외상 등 관전의 문제를
-                    개선하는 치료를 말합니다.<br>
-                    마이다스의 손은 전문 도수치료사가 1대1 정확한 맞춤 치료로 환자가 불편하다고 느끼는
-                    틀어진 뼈와,근육,신경을 바로 잡아주는 치료를 진행하고 있습니다.
-                </p>
+                <pre style="font-size: 22px; font-family: 'Yeon Sung', cursive;">
+약물이나 수술, 기계를 사용하지 않고 전문 도수치료사의 수기로 근 골격계에 발생할 수 있는 통증, 질환, 외상 등 관전의 문제를 개선하는 치료를 말합니다.
+마이다스의 손은 전문 도수치료사가 1대1 정확한 맞춤 치료로 환자가 불편하다고 느끼는틀어진 뼈와,근육,신경을 바로 잡아주는 치료를 진행하고 있습니다.
+거북목, 허리통증 등 각종 질환에 대해 전문적인 치료를 통한 증상완화를 약속드립니다.
+
+                </pre>
             </div>
         </div>
     </section>
 
-
+    <br>
+    <br>
+    <br>
     <section id="video_ads">
         <div class="container">
 
             <div class="row">
-                <h1>
+                <h1 style="font-family: 'Yeon Sung', cursive;">
                     영상을 통해 스스로 하는 자세교정
                 </h1>
 
             </div>
-            <div class="row">
-                <p>
+            <div class="row" style="font-family: 'Yeon Sung', cursive;">
+                <p style="font-size: 25px;">
                     보고 따라 하면 좋은 유용한 자세교정 영상.
                 </p>
             </div>
             <hr>
-            <div class="row">
+            <div class="row" style="font-family: 'Yeon Sung', cursive;">
                 <div class="col-6">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/qMtyhDDmJ-U?start=5"
                         frameborder="2" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -105,13 +122,13 @@
                 </div>
             </div>
             <br>
-            <div class="row">
+            <div class="row" style="font-family: 'Yeon Sung', cursive;">
                 <h1>
                     도수치료 영상
                 </h1>
             </div>
-            <div class="row">
-                <p>
+            <div class="row" style="font-family: 'Yeon Sung', cursive;">
+                <p style="font-size: 25px;">
                     재미로 보는 도수치료 영상
                 </p>
             </div>
@@ -132,49 +149,60 @@
         </div>
     </section>
     <br>
+    <br>
+    <br>
     <section id="price">
 
-        <div class="container">
-            <h1>
+        <div class="container" style="font-family: 'Yeon Sung', cursive;">
+            <h1 style="font-family: 'Yeon Sung', cursive;">
                 가격안내
-            </h1>
+            </h1 style="font-family: 'Yeon Sung', cursive;">
             <hr>
+            <div class="row">
             <div class="card-group">
                 <div class="card" style="margin-right: 10px;">
-                    <div class="card-body">
-                        <h5 class="card-title">반신</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <div class="card-body" style="text-align: center;">
+                        <h3 class="card-title">반신 도수치료</h3>
+                        <p class="card-text" style="font-size: 20px;">불편한 곳만을 집중적으로 치료하는 <br>반신 도수치료입니다.</p>
+                        <p class="card-text"><small class="text-muted">1회 5만원</small></p>
                     </div>
                 </div>
                 <div class="card" style="margin-right: 10px;">
-                    <div class="card-body">
-                        <h5 class="card-title">전신</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <div class="card-body" style="text-align: center;">
+                        <h3 class="card-title">전신 도수치료</h3>
+                        <p class="card-text" style="font-size: 20px;">불편한 곳을 포함하여 몸의 전신을 치료해주는 전신 도수 치료입니다.
+                            </p>
+                        <p class="card-text"><small class="text-muted">1회 10만원</small></p>
                     </div>
                 </div>
                 <div class="card" style="margin-right: 10px;">
-                    <div class="card-body">
-                        <h5 class="card-title">전신x10</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <div class="card-body" style="text-align: center;">
+                        <h3 class="card-title">전신 도수치료 10회</h3>
+                        <p class="card-text" style="font-size: 20px;">전신 도수치료 10회 이용 가격입니다.</p>
+                        <p class="card-text"><small class="text-muted">10회 70만원</small></p>
                     </div>
+                </div>
                 </div>
             </div>
-
+        </div>
+        <div class="container">
+            <p style="font-size: 30px; text-align: center; font-family: 'Yeon Sung', cursive;">
+                치료에 대한 자세한 문의<br>
+                또는 가격에 대한 추가 문의<br>
+                HP: <span style="color: blue;">010-8654-4672</span><br>
+                가게 전회: <span style="color: blue;">031-942-4317</span><br>
+                연락 해주세요!
+           </p>
         </div>
     </section>
     <br>
+    <br>
+    <br>
     <section id="location" style="margin-bottom: 70px;">
         <div class="container">
-            <h1>위치</h1>
+            <h1 style="font-family: 'Yeon Sung', cursive;">위치</h1>
             <hr>
-            <div id="map" style="width:1200px;height:700px;">
+            <div id="map" style="width:1100px;height:700px;">
             </div>
         </div>
     </section>
@@ -212,17 +240,17 @@
 
     // 마커가 지도 위에 표시되도록 설정합니다
     marker.setMap(map);
-    var iwContent = '<div style="padding:30px;">마이다스의손 (경기도 파주시 금촌동 가나무로 115) <br><a href="https://map.kakao.com/link/map/마이다스의손,37.7542485,126.7782498" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/마이다스의손,37.7542485,126.7782498" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
-    iwPosition = new kakao.maps.LatLng(37.7542485, 126.7782498); //인포윈도우 표시 위치입니다
+    var iwContent = '<div style="padding:30px;">마이다스의손 <br>[경기도 파주시 금촌동가나무로 115] <br><a href="https://map.kakao.com/link/map/마이다스의손,37.7542485,126.7782498" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/마이다스의손,37.7542485,126.7782498" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+        iwPosition = new kakao.maps.LatLng(37.7542485, 126.7782498); //인포윈도우 표시 위치입니다
 
-// 인포윈도우를 생성합니다
-var infowindow = new kakao.maps.InfoWindow({
-    position : iwPosition, 
-    content : iwContent 
-});
-  
-// 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
-infowindow.open(map, marker); 
+    // 인포윈도우를 생성합니다
+    var infowindow = new kakao.maps.InfoWindow({
+        position: iwPosition,
+        content: iwContent
+    });
+
+    // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+    infowindow.open(map, marker);
 
 
 </script>
