--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -19,6 +19,7 @@
         crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
 </head>
 
 <body style="background-color: rgb(236, 242, 245)">
@@ -70,7 +71,7 @@
         <div class="container" style="margin-top:30px;" id="explain">
             <!-- Content here -->
             <div class="row" style="border-bottom: rgb(105, 105, 105) solid 1px;">
-                <h1 style="font-family: 'Yeon Sung', cursive;">도수 치료란?</h1>
+                <h1 style="font-family: 'Jua', sans-serif;">도수 치료란?</h1>
             </div>
             <div class="row">
                 <br>
@@ -81,7 +82,7 @@
             </div>
             <br>
             <div class="row">
-                <pre style="font-size: 22px; font-family: 'Yeon Sung', cursive;">
+                <pre style="font-size: 18px; font-family: 'Jua', sans-serif;">
 약물이나 수술, 기계를 사용하지 않고 전문 도수치료사의 수기로 근 골격계에 발생할 수 있는 통증, 질환, 외상 등 관전의 문제를 개선하는 치료를 말합니다.
 마이다스의 손은 전문 도수치료사가 1대1 정확한 맞춤 치료로 환자가 불편하다고 느끼는틀어진 뼈와,근육,신경을 바로 잡아주는 치료를 진행하고 있습니다.
 거북목, 허리통증 등 각종 질환에 대해 전문적인 치료를 통한 증상완화를 약속드립니다.
@@ -98,18 +99,18 @@
         <div class="container">
 
             <div class="row">
-                <h1 style="font-family: 'Yeon Sung', cursive;">
+                <h1 style="font-family: 'Jua', sans-serif;">
                     영상을 통해 스스로 하는 자세교정
                 </h1>
 
             </div>
-            <div class="row" style="font-family: 'Yeon Sung', cursive;">
+            <div class="row" style="font-family: 'Jua', sans-serif;">
                 <p style="font-size: 25px;">
                     보고 따라 하면 좋은 유용한 자세교정 영상.
                 </p>
             </div>
             <hr>
-            <div class="row" style="font-family: 'Yeon Sung', cursive;">
+            <div class="row" style="font-family: 'Jua', sans-serif;">
                 <div class="col-6">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/qMtyhDDmJ-U?start=5"
                         frameborder="2" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -122,12 +123,12 @@
                 </div>
             </div>
             <br>
-            <div class="row" style="font-family: 'Yeon Sung', cursive;">
+            <div class="row" style="font-family: 'Jua', sans-serif;">
                 <h1>
                     도수치료 영상
                 </h1>
             </div>
-            <div class="row" style="font-family: 'Yeon Sung', cursive;">
+            <div class="row" style="font-family: 'Jua', sans-serif;">
                 <p style="font-size: 25px;">
                     재미로 보는 도수치료 영상
                 </p>
@@ -153,10 +154,10 @@
     <br>
     <section id="price">
 
-        <div class="container" style="font-family: 'Yeon Sung', cursive;">
-            <h1 style="font-family: 'Yeon Sung', cursive;">
+        <div class="container" style="font-family: 'Jua', sans-serif;">
+            <h1 style="font-family: 'Jua', sans-serif;">
                 가격안내
-            </h1 style="font-family: 'Yeon Sung', cursive;">
+            </h1 style="font-family: 'Jua', sans-serif;">
             <hr>
             <div class="row">
             <div class="card-group">
@@ -186,7 +187,8 @@
             </div>
         </div>
         <div class="container">
-            <p style="font-size: 30px; text-align: center; font-family: 'Yeon Sung', cursive;">
+            <p style="font-size: 30px; text-align: center; font-family: 'Jua', sans-serif;">
+                <br>
                 치료에 대한 자세한 문의<br>
                 또는 가격에 대한 추가 문의<br>
                 HP: <span style="color: blue;">010-8654-4672</span><br>
@@ -200,7 +202,7 @@
     <br>
     <section id="location" style="margin-bottom: 70px;">
         <div class="container">
-            <h1 style="font-family: 'Yeon Sung', cursive;">위치</h1>
+            <h1 style="font-family: 'Jua', sans-serif;">위치</h1>
             <hr>
             <div id="map" style="width:1100px;height:700px;">
             </div>
